--- a/Lab-1 Quantum Measurement/Lab01_QuantumMeasurement.ipynb
+++ b/Lab-1 Quantum Measurement/Lab01_QuantumMeasurement.ipynb
@@ -32,16 +32,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#from Quantum_Computing import *\n",
     "import numpy as np\n",
+    "from qiskit import QuantumCircuit\n",
     "from numpy import linalg as la\n",
     "from qiskit.tools.monitor import job_monitor\n",
     "import qiskit.tools.jupyter\n",
-    "import matplotlib.pyplot as plt #needed to draw circuits"
+    "import matplotlib.pyplot as plt #needed to draw circuits\n",
+    "import importlib.util\n",
+    "import sys\n",
+    "\n",
+    "# For illustrative purposes.\n",
+    "#name = 'qiskit'\n",
+    "\n",
+    "#if name in sys.modules:\n",
+    "#    print(f\"{name!r} already in sys.modules\")\n",
+    "#elif (spec := importlib.util.find_spec(name)) is not None:\n",
+    "#    # If you choose to perform the actual import ...\n",
+    "#    module = importlib.util.module_from_spec(spec)\n",
+    "#    sys.modules[name] = module\n",
+    "#    spec.loader.exec_module(module)\n",
+    "#    print(f\"{name!r} has been imported\")\n",
+    "#else:\n",
+    "#    print(f\"can't find the {name!r} module\")"
    ]
   },
   {
@@ -113,16 +130,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'j' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19992/4237134477.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m#### your code goes here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m desired_vector = [\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0mj\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m ]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'j' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "qc = QuantumCircuit(1, 1)\n",
+    "import math\n",
+    "from qiskit import QuantumCircuit\n",
+    "from qiskit import QuantumRegister\n",
+    "\n",
+    "q = QuantumRegister(1)\n",
+    "\n",
+    "qc = QuantumCircuit(q)\n",
     "\n",
     "#### your code goes here\n",
+    "desired_vector = [\n",
+    "    1/math.sqrt(2),\n",
+    "    (1+1)/math.sqrt(4)\n",
+    "]\n",
+    "qc.initialize(desired_vector, [q[0]])\n",
     "\n",
-    "\n",
-    "\n",
+    "qc.draw()\n",
     "\n",
     "\n"
    ]
