--- a/Lab-1 Quantum Measurement/Lab01_QuantumMeasurement.ipynb
+++ b/Lab-1 Quantum Measurement/Lab01_QuantumMeasurement.ipynb
@@ -36584,45 +36584,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───────────────────────────────────┐\n",
+       "q_0: ┤0                                  ├\n",
+       "     │  Initialize(0,-0.70711,0.70711,0) │\n",
+       "q_1: ┤1                                  ├\n",
+       "     └───────────────────────────────────┘\n",
+       "c: 2/═════════════════════════════════════\n",
+       "                                          </pre>"
+      ],
+      "text/plain": [
+       "     ┌───────────────────────────────────┐\n",
+       "q_0: ┤0                                  ├\n",
+       "     │  Initialize(0,-0.70711,0.70711,0) │\n",
+       "q_1: ┤1                                  ├\n",
+       "     └───────────────────────────────────┘\n",
+       "c: 2/═════════════════════════════════════\n",
+       "                                          "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# circuit for the state Tri1\n",
     "Tri1 = QuantumCircuit(2, 2)\n",
     "# your code goes here\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# Tri1 state vector and initialization\n",
+    "Tri1_vector = [\n",
+    "    1.0/math.sqrt(2),\n",
+    "    0,\n",
+    "    0,\n",
+    "    1.0/math.sqrt(2)\n",
+    "]\n",
+    "Tri1.initialize(Tri1_vector, [0,1])\n",
+    "Tri1.draw()\n",
     "\n",
     "# circuit for the state Tri2\n",
     "Tri2 = QuantumCircuit(2, 2)\n",
     "# your code goes here\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# Tri2 state vector and initialization\n",
+    "Tri2_vector = [\n",
+    "    1.0/math.sqrt(2),\n",
+    "    0,\n",
+    "    0,\n",
+    "    -1.0/math.sqrt(2)\n",
+    "]\n",
+    "Tri2.initialize(Tri2_vector, [0,1])\n",
+    "Tri2.draw()\n",
     "\n",
     "# circuit for the state Tri3\n",
     "Tri3 = QuantumCircuit(2, 2)\n",
     "# your code goes here\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# Tri3 state vector and initialization\n",
+    "Tri3_vector = [\n",
+    "    0,\n",
+    "    1.0/math.sqrt(2),\n",
+    "    1.0/math.sqrt(2),\n",
+    "    0\n",
+    "]\n",
+    "Tri3.initialize(Tri3_vector, [0,1])\n",
+    "Tri3.draw()\n",
     "\n",
     "# circuit for the state Sing\n",
     "Sing = QuantumCircuit(2, 2)\n",
     "# your code goes here\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# Sing state vector and initialization\n",
+    "Sing_vector = [\n",
+    "    0,\n",
+    "    -1.0/math.sqrt(2),\n",
+    "    1.0/math.sqrt(2),\n",
+    "    0\n",
+    "]\n",
+    "Sing.initialize(Sing_vector, [0,1])\n",
+    "Sing.draw()\n"
    ]
   },
   {
@@ -36634,7 +36680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36645,17 +36691,18 @@
     "# <XX>\n",
     "measure_XX = QuantumCircuit(2)\n",
     "# your code goes here\n",
-    "\n",
-    "\n",
-    "\n",
+    "measure_XX.h(0)\n",
+    "measure_XX.h(1)\n",
+    "measure_XX.measure_all()\n",
     "\n",
     "# <YY>\n",
     "measure_YY = QuantumCircuit(2)\n",
     "# your code goes here\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "measure_YY.sdg(0)\n",
+    "measure_YY.sdg(1)\n",
+    "measure_YY.h(0)\n",
+    "measure_YY.h(1)\n",
+    "measure_YY.measure_all()\n"
    ]
   },
   {
@@ -36667,7 +36714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36681,7 +36728,7 @@
     "    \n",
     "        # run the circuit with the selected measurement and get the number of samples that output each bit value\n",
     "        qc = state_init.compose(measure_circuit)\n",
-    "        qc_trans = transpile(qc, sim)\n",
+    "        qc_trans = qiskit.compiler.transpile(qc, sim)\n",
     "        counts = sim.run(qc_trans, shots=shots).result().get_counts()\n",
     "\n",
     "        # calculate the probabilities for each computational basis\n",
@@ -36699,9 +36746,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Energy expectation value of the state Tri1 : 1.470e-06 eV\n",
+      "Energy expectation value of the state Tri2 : 1.470e-06 eV\n",
+      "Energy expectation value of the state Tri3 : 1.470e-06 eV\n",
+      "Energy expectation value of the state Sing : -4.410e-06 eV\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell to print out your results\n",
     "\n",
