Lab2_Part_One_Finished!!!
Finished the function for creating the circuit!!!

--- a/Lab-2 Quantum Simulation/Lab-2_Quantum-Simulation.ipynb
+++ b/Lab-2 Quantum Simulation/Lab-2_Quantum-Simulation.ipynb
@@ -379,19 +379,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "922b5255",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_7012/2745399965.py, line 41)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Tyler\\AppData\\Local\\Temp/ipykernel_7012/2745399965.py\"\u001b[1;36m, line \u001b[1;32m41\u001b[0m\n\u001b[1;33m    qc = U(qc,t,J,g,m) for t in ts\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#### Your code goes here\n",
     "import numpy as np\n",
@@ -402,13 +393,6 @@
     "#Conveniently enough, qiskit has both a ZZ(theta) and X(theta) gates by default. Check the docs on how to call them.\n",
     "#Start by calculating the angle theta for a given time and number of steps. Then create function(s) to add on \n",
     "\n",
-    "# qc.rx(theta,0)\n",
-    "# qc.rx(theta,1)\n",
-    "# qc.rx(theta,2)\n",
-    "# qc.rzz(theta,0,1)\n",
-    "# qc.rzz(theta,1,2)\n",
-    "# qc.draw()\n",
-    "\n",
     "# Define function for operating gates on the quantum circuit object\n",
     "#\n",
     "# params: qc - quantum circuit to gate\n",
@@ -416,13 +400,19 @@
     "# params: J - zz coupling constant\n",
     "# params: g - x interaction constant\n",
     "# params: m - number of trotter steps\n",
-    "def U(qc, t, J, g, m):\n",
+    "def U_trotter(qc, t, J, g, m):\n",
     "    m_steps = np.linspace(0,m,m)\n",
     "    theta_one = t * J / m\n",
-    "    teta_two = theta_one * g\n",
+    "    theta_two = theta_one * g\n",
     "    for i in m_steps:\n",
-    "        U = qc.rzz(theta_one, 0, 1) * qc.rzz(theta_one, 0, 1) * qc.rx(theta_two, 0) * qc.rx(theta_two, 1) * qc.rx(theta_two, 2)\n",
-    "    return U\n",
+    "#         U = qc.rzz(theta_one, 0, 1) * qc.rzz(theta_one, 0, 1) * qc.rx(theta_two, 0) * qc.rx(theta_two, 1) * qc.rx(theta_two, 2)\n",
+    "#         U = qc.rzz(theta_one,0,1)\n",
+    "        qc.rzz(theta_one,0,1)\n",
+    "        qc.rzz(theta_one,1,2)\n",
+    "        qc.rx(theta_two,0)\n",
+    "        qc.rx(theta_two,1)\n",
+    "        qc.rx(theta_two,2)\n",
+    "    return qc\n",
     "    \n",
     "# quantum circuit object\n",
     "qc = QuantumCircuit(3,3)\n",
@@ -431,10 +421,14 @@
     "ts = np.linspace(0, np.pi, 10)\n",
     "J = 1.0\n",
     "g = 1.\n",
-    "m = 1\n",
+    "m = 10\n",
+    "t = 1\n",
     "\n",
-    "qc = U(qc,t,J,g,m) for t in ts\n",
-    "qc.draw()\n"
+    "# U = U_trotter(qc,t,J,g,m)\n",
+    "# print(U)\n",
+    "\n",
+    "qc = U_trotter(qc,t,J,g,m)\n",
+    "# qc.draw()\n"
    ]
   },
   {
@@ -455,6 +449,7 @@
     "#### Your code goes here\n",
     "import numpy as np\n",
     "import qiskit\n",
+    "from qiskit import QuantumCircuit\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#Note in the example plot, the parameters J = g = 1.0\n",
@@ -462,10 +457,47 @@
     "#Recall that the results are returned as a dict object with the bitstring as keys and the number of counts as values.\n",
     "# A suggestion to run this quickly is to use the Aer simulator backend.  For extra points, plot the time evolution\n",
     "#  using a real device\n",
+    "initial_state_vector = [\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    1,\n",
+    "    0,\n",
+    "    0\n",
+    "]\n",
     "\n",
+    "# Define function for operating gates on the quantum circuit object\n",
+    "#\n",
+    "# params: qc - quantum circuit to gate\n",
+    "# params: t - time at which operation takes place\n",
+    "# params: J - zz coupling constant\n",
+    "# params: g - x interaction constant\n",
+    "# params: m - number of trotter steps\n",
+    "def U_trotter(qc, t, J, g, m):\n",
+    "    m_steps = np.linspace(0,m,m)\n",
+    "    theta_one = t * J / m\n",
+    "    theta_two = theta_one * g\n",
+    "    for i in m_steps:\n",
+    "#         U = qc.rzz(theta_one, 0, 1) * qc.rzz(theta_one, 0, 1) * qc.rx(theta_two, 0) * qc.rx(theta_two, 1) * qc.rx(theta_two, 2)\n",
+    "#         U = qc.rzz(theta_one,0,1)\n",
+    "        qc.rzz(theta_one,0,1)\n",
+    "        qc.rzz(theta_one,1,2)\n",
+    "        qc.rx(theta_two,0)\n",
+    "        qc.rx(theta_two,1)\n",
+    "        qc.rx(theta_two,2)\n",
+    "    return qc\n",
     "\n",
+    "# quantum circuit object\n",
+    "qc = QuantumCircuit(3,3)\n",
     "\n",
-    "\n"
+    "# array of time points and constants\n",
+    "ts = np.linspace(0, np.pi, 10)\n",
+    "J = 1.0\n",
+    "g = 1.\n",
+    "m = 10\n",
+    "t = 1\n"
    ]
   },
   {
