--- a/Lab-2 Quantum Simulation/Lab-2_Quantum-Simulation.ipynb
+++ b/Lab-2 Quantum Simulation/Lab-2_Quantum-Simulation.ipynb
@@ -1,9 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "39d5c114",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdf22bfe",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Digital Quantum Simulations\n",
     "$$\\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}$$\n",
@@ -367,11 +369,34 @@
     "<h3 style=\"font-size: 20px\">&#128211; Expand each of the operators of U(t) and show that they are equivalent to the rotation matrices above.\n",
     "    \n",
     "$$\n",
-    "    e^{-i\\theta_1 Z_0Z_1} = 1 + \\frac{(-i\\theta_1 ZZ)}{1!} + \\frac{(-i\\theta_1 ZZ)^2}{2!} + \\frac{(-i\\theta_1 ZZ)^3}{3!} \\\\\n",
-    "    with \\\\\n",
-    "    (ZZ)^{2k} = I for k \\belongs R \n",
+    "    e^{-i\\theta_1 Z\\otimes Z} = I + \\frac{(-i\\theta_1 Z\\otimes Z)}{1!} + \\frac{(-i\\theta_1 Z\\otimes Z)^2}{2!} + \\frac{(-i\\theta_1 Z\\otimes Z)^3}{3!} + ... \\\\\n",
     "$$\n",
-    "    "
+    "    with\n",
+    "$$\n",
+    "    (Z\\otimes Z)^{2k} = I\\quad  \\forall k \\in R \\\\\n",
+    "$$\n",
+    "    and\n",
+    "$$\n",
+    "    (Z\\otimes Z)^{2k+1} = (Z\\otimes Z)^{2k} \\times (Z\\otimes Z) = Z\\otimes Z \\\\\n",
+    "$$\n",
+    "    therefore,\n",
+    "$$\n",
+    "    e^{-i\\theta_1 Z\\otimes Z} = I - i\\theta_1 Z\\otimes Z - \\frac{(\\theta_1 I)}{2!} + \\frac{(i\\theta_1 Z\\otimes Z)}{3!} + ... \\\\\n",
+    "    = (I - \\frac{(\\theta_1 I)}{2!}) - i(\\theta_1 Z\\otimes Z - \\frac{(\\theta_1 Z\\otimes Z)}{3!})\n",
+    "    = I cos(\\theta_1) - i Z\\otimes Zsin(\\theta_1) \\\\\n",
+    "    = \\begin{pmatrix} cos(\\theta_1) - isin(\\theta_1) & 0 & 0 & 0 \\\\\n",
+    "                      0 & cos(\\theta_1) + isin(\\theta_1) & 0 & 0 \\\\ \n",
+    "                      0 & 0 & cos(\\theta_1) + isin(\\theta_1) & 0 \\\\ \n",
+    "                      0 & 0 & 0 & cos(\\theta_1) - isin(\\theta_1)  \\end{pmatrix} \\\\\n",
+    "    = \\begin{pmatrix} e^{-i\\frac{\\theta}{2}} & 0 & 0 & 0 \\\\\n",
+    "                                0 & e^{i\\frac{\\theta}{2}} & 0 & 0 \\\\ \n",
+    "                                0 & 0 & e^{i\\frac{\\theta}{2}} & 0 \\\\ \n",
+    "                                0 & 0 & 0 & e^{-i\\frac{\\theta}{2}}  \\end{pmatrix} \\\\ \n",
+    "$$\n",
+    "    similarly, for x we have:\n",
+    "$$\n",
+    "    \n",
+    "$$"
    ]
   },
   {
