--- a/Lab-2 Quantum Simulation/Lab-2_Quantum-Simulation.ipynb
+++ b/Lab-2 Quantum Simulation/Lab-2_Quantum-Simulation.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fdf22bfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_12160/2948130777.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Tyler\\AppData\\Local\\Temp/ipykernel_12160/2948130777.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    $$\\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}$$\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Digital Quantum Simulations\n",
     "$$\\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}$$\n",
